#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2011-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9985 released.

        * Tweaked Makefile.PL to handle BerkeleyDB without sub-minor
          version.


2011-11-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9984 released.

        * Fixed some issues with very latest Ubuntu release.


2011-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9983 released.

        * Fixed some login issues with sftp when Su element is
          present.

        * Added Note describing how to set up Cygwin mintty
          shortcut to run FullAuto on remote systems.

        * Added compare_fa_code demo example to fa_code_demo.pm.


2011-11-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9982 released.

        * Fixed mirror() and insured it works between Solaris,
          Ubuntu and Cygwin/Windows.

        * Fixed FULL CALENDAR when choosing a password
          or plan expiration.

        * Removed BETA warning against running in production
          environments. We are mere steps away from Version 1.0!


2011-11-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9981 released.

        * Fixed mirror() and insured it works between Solaris,
          Ubuntu and Cygwin/Windows.

        * Fixed Daylight Savings problem between Windows and
          Unix.


2011-11-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9980 released.

        * Fixed mirror() and insured it works on both Solaris
          and Ubuntu.


2011-10-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
