@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 088e18a9e99a10125fb284595a9bfc315088c8e6 ChangeLog
+SHA1 cc708548df52b2bb256c89236d438069ee5f2d74 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2c47234815d7762d27b0de69a1610dcf811aa740 MANIFEST
-SHA1 1c11f5973e69ae1998c550e61106052bfa6513a1 META.yml
-SHA1 39ddc1b46ead4d07a9872c839c8e38b0775eb0fd Makefile.PL
+SHA1 7fd29c14f6b0dead1d10d8a33389e4f6001bf8e3 META.yml
+SHA1 10b7a856cf5707b1a13c124db7f9ea278515530b Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -35,7 +35,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 947f7e0c4a030fe293bc41c2211b4ea667388e24 lib/Net/FullAuto.pm
+SHA1 cc58ba8cfef8decc95e3fb13f3979a0d725e3057 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 a6b31bc5f4cd8e45c1a9e1bfee72c780aec7f503 lib/Net/FullAuto/Distro/fa_code.pm
@@ -45,13 +45,13 @@ SHA1 97492773d5021025f3239614db3915e85da625de lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 5e5bf1fb274122e41b89de64d065cfbacc8b2cd6 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 7563389137eb804672dba8fde06fdaee5f29d295 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 a624f36d14585c7635e2a04cb771e0bf0157c0f7 lib/Net/FullAuto/Distro/fa_menu_demo.pm
-SHA1 4a986635244493d7a33d627775b06939540c989e lib/Net/FullAuto/FA_Core.pm
+SHA1 b4e77f63b087f808c05660f7def5e98d782340ad lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk7YVcsACgkQdsVAdUjO9IkL3gCfVa9pYUoGABzGTAqi+9E3SS3a
-iRAAoI4L3XDHKppZ60zjPUoPa/ICJZZ0
-=CY4E
+iEYEARECAAYFAk7avlwACgkQdsVAdUjO9IlmFgCfb2vrr9LThbORQozMmh5ZKQyz
+55cAn0YaLiX7tIF05C76tHR2X+I7AqQV
+=RYGh
 -----END PGP SIGNATURE-----
