@@ -19,6 +19,13 @@
 ################################################################
 
 
+2011-12-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9986 released.
+
+        * Updated Makefile.PL to work with redhat and fedora.
+
+
 2011-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9985 released.
